<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/default_card_margin"
    app:cardCornerRadius="@dimen/card_corner_radius"
    tools:showIn="@layout/content_main">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/default_card_margin">

        <ImageView
            android:id="@+id/facebook_icon"
            android:layout_width="@dimen/image_icon_size"
            android:layout_height="@dimen/image_icon_size"
            android:contentDescription="@string/CD_card_social_facebook"
            android:src="@drawable/ic_facebook"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/facebook_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/card_social_facebook_test"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toBottomOf="@+id/facebook_icon"
            app:layout_constraintLeft_toRightOf="@+id/facebook_icon"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/facebook_icon" />


        <ImageView
            android:id="@+id/instagram_icon"
            android:layout_width="@dimen/image_icon_size"
            android:layout_height="@dimen/image_icon_size"
            android:layout_marginTop="@dimen/space_between_views"
            android:contentDescription="@string/CD_card_social_instagram"
            android:src="@drawable/ic_instagram"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/facebook_icon" />

        <TextView
            android:id="@+id/instagram_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/instagram_icon"
            android:text="@string/card_social_instagram_test"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toBottomOf="@+id/instagram_icon"
            app:layout_constraintLeft_toLeftOf="@+id/facebook_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/instagram_icon" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        style="@style/TextAppearance.AppCompat.Large.Inverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:background="@drawable/card_view_color"
        android:gravity="center"
        android:padding="@dimen/card_strip_text_padding"
        android:text="@string/card_social_strip" />

</android.support.v7.widget.CardView>