<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:showIn="@layout/fragment_refer">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_card_margin"
        android:layout_marginTop="@dimen/default_card_margin"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/share_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/CD_card_referral_share_image"
            android:src="@drawable/ic_refer_share"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/share_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_between_unrelated_views"
            android:text="@string/card_referral_share_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/share_image" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/share_title"
            android:layout_marginTop="@dimen/space_between_related_views"
            android:gravity="center"
            android:text="@string/card_referral_share_message"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/share_title" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>